# lightfield_linearsys

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  driver_pair.py  driver_point.py  pyproject.toml
config/: solve_pair_fista.yaml  solve_pair_fista_version2.yaml  solve_pair_ista.yaml  solve_pair_ista_120.yaml  solve_pair_ista_20.yaml  solve_pair_ista_60.yaml  solve_pair_ista_80.yaml  solve_pair_ista_bunny.yaml  solve_pair_ista_crop_120um.yaml  solve_pair_ista_crop_20um.yaml  solve_pair_ista_crop_60um.yaml  solve_pair_ista_crop_80um.yaml  solve_pair_ista_scaled.yaml  solve_pair_lbfgsb_120.yaml  solve_pair_lbfgsb_20.yaml  solve_pair_lbfgsb_60.yaml  solve_pair_lbfgsb_80.yaml  solve_point_fista.yaml  solve_point_ista.yaml  solve_point_ista_bunny.yaml  solve_point_ista_sm.yaml  solve_point_newton_120.yaml  solve_point_newton_20.yaml  solve_point_newton_60.yaml  solve_point_newton_80.yaml  solve_point_newton_80_A1e-1_reg1e-3.yaml  solve_point_newton_80_A1e-2_reg1e-6.yaml  solve_point_newton_bunny_A0p14_reg1e-6.yaml  solve_point_newton_bunny_A0p16_reg_1e-6.yaml  solve_point_newton_bunny_A1e-3_reg1e-2.yaml  solve_point_newton_bunny_A1e-3_reg1e-6.yaml  solve_point_newton_bunny_A1e-3_reg_1e-6.yaml  solve_point_newton_bunny_reg1e-1.yaml  solve_point_newton_bunny_reg1e-2.yaml  solve_point_newton_bunny_reg1e-3.yaml  solve_point_newton_bunny_reg1e-4.yaml  solve_point_newton_bunny_reg1e-5.yaml  solve_point_newton_bunny_reg1e-6.yaml  solve_point_newton_bunny_reg1e-7.yaml  solve_point_newton_bunny_reg1p0.yaml  (+4 more)
scripts/: check_pt.py  compute_3d_metric.py  emd_to_reconstruct_pt.py  (+12 more)
(+44 files in other folders)
